After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590879 - Should use _NET_WM_WINDOW_TYPE_SPLASH instead of _NET_WM_WINDOW_TYPE_SPLASHSCREEN
Should use _NET_WM_WINDOW_TYPE_SPLASH instead of _NET_WM_WINDOW_TYPE_SPLASHSC...
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
2.27.x
Other All
: Normal normal
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2009-08-05 18:37 UTC by Marcus Carlson
Modified: 2017-03-03 14:06 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28



Description Marcus Carlson 2009-08-05 18:37:09 UTC
Please describe the problem:
Looking at the code in both libwnck [1] and metacity [2] they both reference "_NET_WM_WINDOW_TYPE_SPLASHSCREEN" but according to the spec [3] this should be "_NET_WM_WINDOW_TYPE_SPLASH" (without SCREEN). I'm not 100% sure about this but to me it looks like a bug.

[1] window.c:975;
  case WNCK_WINDOW_SPLASHSCREEN:
    atom = _wnck_atom_get ("_NET_WM_WINDOW_TYPE_SPLASHSCREEN");
    break;
[2] metacity-window-demo.c:533
  window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
  set_gtk_window_type (GTK_WINDOW (window), "_NET_WM_WINDOW_TYPE_SPLASHSCREEN");
  gtk_window_set_title (GTK_WINDOW (window), "Splashscreen");
[3] http://standards.freedesktop.org/wm-spec/1.3/ar01s05.html

Steps to reproduce:


Actual results:


Expected results:


Does this happen every time?


Other information:
A quick google shows that it might be more projects affected by this.
Comment 1 Vincent Untz 2010-03-09 01:36:38 UTC
Thanks for noticing this!

Fixed in libwnck, moving to metacity for the metacity part.