[core] Use _NET_WM_WINDOW_TYPE_SPLASH instead of non-existing hint

We were using _NET_WM_WINDOW_TYPE_SPLASHSCREEN

https://bugzilla.gnome.org/show_bug.cgi?id=590879